<resources>
    <string name="app_name">Foodsy</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="login">SIGN IN</string>
    <string name="enterUsername">Please enter your username.</string>
    <string name="usernameWithSpace">Username does not contain spaces.</string>
    <string name="enterPassword">Please enter your password.</string>
    <string name="logo">Logo</string>
    <string name="not_registered_yet_sign_up">Not registered yet? Sign Up.</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="surname">Surname</string>
    <string name="name">Name</string>
    <string name="lastname">Lastname</string>
    <string name="you_have_already_an_account_sign_in">You have already an account? Sign In.</string>
    <string name="sign_up">Sign Up</string>
    <!--
    This string is used for square devices and overridden by hello_world in
    values-round/strings.xml for round devices.
    -->
    <string name="hello_world">Hello Square World!</string>
    <string name="create_account">Create Account</string>
    <string name="firstname">Firstname</string>
    <string name="uuid">UUID</string>
    <string name="mealName">Please enter your Meal Name.</string>
    <string name="mealCategory">Please enter your Meal Category.</string>
    <string name="mealArea">Please enter your Meal Area.</string>
    <string name="title_activity_user">UserActivity</string>
    <string name="order_meal">Order Meal</string>
    <string name="logout">Logout</string>
    <string name="profile_image">Profile Image</string>
    <string name="meal_image">Meal Image</string>
    <string name="meal_name">Meal Name</string>
    <string name="meal_category_e_g_vegetarian">Meal Category (e.g. Vegetarian)</string>
    <string name="meal_area_e_g_italy">Meal Area (e.g. Italy)</string>
    <string name="meal_ingredients_e_g_penne">Meal Ingredients (e.g. Penne)</string>
    <string name="offer_meal">OFFER MEAL</string>
    <string name="star_rating">star_rating</string>
    <string name="mealprice">Mealprice in €</string>
    <string name="delete_account">Delete account</string>
</resources>