<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="loginRegisterViewModel"
            type="ebucelik.keepeasy.foodsy.viewmodels.LoginActivityViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/imageView"
                    style="@style/marginStyle"
                    android:layout_width="match_parent"
                    android:layout_height="111dp"
                    android:layout_marginStart="32dp"
                    android:layout_marginTop="16dp"
                    android:layout_marginEnd="@dimen/marginStartEnd"
                    android:contentDescription="@string/logo"
                    android:src="@drawable/ic_logo"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.495"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <ImageView
                    android:id="@+id/profileImage"
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    android:layout_marginStart="32dp"
                    android:layout_marginTop="8dp"
                    android:contentDescription="@string/profile_image"
                    android:src="@drawable/ic_round_person_add_24"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/imageView" />

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/firstnameLayout"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="32dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="32dp"
                    android:hint="@string/firstname"
                    app:boxBackgroundMode="outline"
                    app:errorEnabled="true"
                    app:helperTextEnabled="true"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/profileImage"
                    app:startIconDrawable="@drawable/ic_sharp_perm_contact_calendar_24">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/firstname"
                        android:text="@={loginRegisterViewModel.firstnameRegistration}"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:maxLength="25"
                        android:singleLine="true" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/lastnameLayout"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="32dp"
                    android:layout_marginEnd="32dp"
                    android:hint="@string/lastname"
                    app:boxBackgroundMode="outline"
                    app:errorEnabled="true"
                    app:helperTextEnabled="true"
                    app:layout_constraintBottom_toTopOf="@+id/usernameLayout"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/firstnameLayout"
                    app:startIconDrawable="@drawable/ic_sharp_perm_contact_calendar_24">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/lastname"
                        android:text="@={loginRegisterViewModel.lastnameRegistration}"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:maxLength="25"
                        android:singleLine="true" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/usernameLayout"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="32dp"
                    android:layout_marginEnd="32dp"
                    android:hint="@string/username"
                    app:boxBackgroundMode="outline"
                    app:errorEnabled="true"
                    app:helperTextEnabled="true"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/lastnameLayout"
                    app:startIconDrawable="@drawable/ic_sharp_person">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/username"
                        android:text="@={loginRegisterViewModel.usernameRegistration}"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:maxLength="25"
                        android:singleLine="true" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/passwordLayout"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="32dp"
                    android:layout_marginEnd="32dp"
                    android:hint="@string/password"
                    app:boxBackgroundMode="outline"
                    app:errorEnabled="true"
                    app:helperTextEnabled="true"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/usernameLayout"
                    app:startIconDrawable="@drawable/ic_sharp_lock">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/password"
                        android:text="@={loginRegisterViewModel.passwordRegistration}"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="textPassword"
                        android:maxLength="25"
                        android:singleLine="true"
                        tools:layout_editor_absoluteX="16dp"
                        tools:layout_editor_absoluteY="515dp" />
                </com.google.android.material.textfield.TextInputLayout>

                <TextView
                    android:id="@+id/registered"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_marginStart="32dp"
                    android:layout_marginEnd="32dp"
                    android:layout_marginBottom="32dp"
                    android:layout_weight="1"
                    android:text="@string/you_have_already_an_account_sign_in"
                    app:layout_constraintTop_toBottomOf="@+id/passwordLayout"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toStartOf="parent" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/registerBtn"
                    style="@style/marginStyle"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginStart="@dimen/marginStartEnd"
                    android:layout_marginEnd="@dimen/marginStartEnd"
                    android:layout_marginBottom="8dp"
                    android:text="@string/create_account"
                    android:textSize="20sp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent" />

            </LinearLayout>
        </ScrollView>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>